[tool.poetry]
name = "pycounts_c_yy"
version = "0.1.0"
description = "Calculate word counts in text files."
authors = ["Carrie Yan"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
