[tool.poetry]
name = "pycounts_c_yy"
version = "0.1.0"
description = "Calculate word counts in text files."
authors = ["Carrie Yan"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.2" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]
{% if cookiecutter.include_github_actions == 'ci+cd' -%}
[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]             
branch = "main"                                     
changelog_file = "CHANGELOG.md"                      
build_command = "pip install poetry && poetry build" 
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

                                 
